--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ui-project-boilerplate",
-  "version": "0.0.2",
-  "description": "Mesosphere UI Project Boilerplate",
+  "name": "dcos-installer-ui",
+  "version": "0.0.1",
+  "description": "Mesosphere DCOS Installer UI",
   "main": "./bin/www",
   "author": "Mesosphere Web Team",
   "license": "MIT",
@@ -13,9 +13,11 @@
     "d3": "^3.5.6",
     "debug": "^2.2.0",
     "express": "^4.13.1",
+    "history": "^1.17.0",
     "less-color-lighten": "0.0.1",
     "morgan": "^1.6.1",
     "react": "^0.14.3",
+    "react-router": "^1.0.3",
     "reactjs-components": "0.0.32",
     "statics": "^0.1.0"
   },
