--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "author": "Mesosphere Web Team",
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "^6.3.14",
     "babel-runtime": "^6.3.19",
     "body-parser": "^1.13.2",
     "canvas-ui-system": "^0.1.2",
+    "classnames": "^2.2.1",
     "d3": "^3.5.6",
     "debug": "^2.2.0",
     "express": "^4.13.1",
@@ -17,6 +17,7 @@
     "less-color-lighten": "0.0.1",
     "morgan": "^1.6.1",
     "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "react-router": "^1.0.3",
     "reactjs-components": "0.0.32",
     "statics": "^0.1.0"
