--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^0.14.3",
     "react-router": "^1.0.3",
     "reactjs-components": "0.0.32",
-    "statics": "^0.1.0"
+    "statics": "^0.1.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
