--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "express": "^4.13.1",
     "history": "^1.17.0",
     "less-color-lighten": "0.0.1",
+    "mesosphere-shared-reactjs": "0.0.1",
     "morgan": "^1.6.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.3",
     "reactjs-components": "0.0.32",
-    "statics": "^0.1.0",
-    "underscore": "^1.8.3"
+    "statics": "^0.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
