--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "d3": "^3.5.6",
     "debug": "^2.2.0",
     "express": "^4.13.1",
+    "flux": "^2.1.1",
     "history": "^1.17.0",
     "less-color-lighten": "0.0.1",
-    "mesosphere-shared-reactjs": "0.0.1",
+    "mesosphere-shared-reactjs": "0.0.5",
     "morgan": "^1.6.1",
     "react": "^0.13.3",
     "react-router": "^1.0.3",
     "reactjs-components": "0.0.32",
     "reactjs-mixin": "0.0.2",
-    "statics": "^0.1.0"
+    "statics": "^0.1.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
