--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-connect": "^2.3.1",
+    "gulp-cssnano": "^2.1.0",
     "gulp-eslint": "^1.1.1",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-less": "^3.0.2",
-    "gulp-minify-css": "^1.2.3",
     "gulp-replace": "^0.5.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
