--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "less-color-lighten": "0.0.1",
     "mesosphere-shared-reactjs": "0.0.1",
     "morgan": "^1.6.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
+    "react": "^0.13.3",
     "react-router": "^1.0.3",
     "reactjs-components": "0.0.32",
     "reactjs-mixin": "0.0.2",
@@ -49,6 +48,7 @@
     "gulp-util": "^3.0.6",
     "jsx-loader": "^0.13.2",
     "node-libs-browser": "^0.5.2",
+    "npm-shrinkwrap": "^5.3.0",
     "source-map-loader": "^0.1.5",
     "transform-loader": "^0.2.2",
     "webpack": "^1.10.1"
@@ -57,6 +57,7 @@
     "clean": "rm -rf dist",
     "dist": "npm run clean && NODE_ENV='production' ./node_modules/.bin/gulp dist",
     "serve": "NODE_ENV='development' ./node_modules/.bin/gulp serve",
-    "livereload": "NODE_ENV='development' ./node_modules/.bin/gulp livereload"
+    "livereload": "NODE_ENV='development' ./node_modules/.bin/gulp livereload",
+    "shrinkwrap": "npm-shrinkwrap --dev"
   }
 }
