--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "jest-cli": "^0.4.15",
     "jsx-loader": "^0.13.2",
     "node-libs-browser": "^0.5.2",
     "npm-shrinkwrap": "^5.3.0",
@@ -58,6 +59,25 @@
     "dist": "npm run clean && NODE_ENV='production' ./node_modules/.bin/gulp dist",
     "serve": "NODE_ENV='development' ./node_modules/.bin/gulp serve",
     "livereload": "NODE_ENV='development' ./node_modules/.bin/gulp livereload",
-    "shrinkwrap": "npm-shrinkwrap --dev"
+    "shrinkwrap": "npm-shrinkwrap --dev",
+    "test": "jest"
+  },
+  "jest": {
+    "globals": {
+      "__DEV__": true
+    },
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "es6"
+    ],
+    "modulePathIgnorePatterns": [
+      "/tmp/",
+      "/node_modules/",
+      "/.module-cache/"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
