--- a/package.json
+++ b/package.json
@@ -8,21 +8,17 @@
   "dependencies": {
     "babel-runtime": "^6.3.19",
     "body-parser": "^1.13.2",
-    "canvas-ui-system": "^0.1.2",
+    "canvas-ui": "^0.2.2",
     "classnames": "^2.2.1",
-    "d3": "^3.5.6",
     "debug": "^2.2.0",
-    "express": "^4.13.1",
     "flux": "^2.1.1",
     "history": "^1.17.0",
     "less-color-lighten": "0.0.1",
     "mesosphere-shared-reactjs": "0.0.6",
-    "morgan": "^1.6.1",
     "react": "^0.13.3",
     "react-router": "^1.0.3",
     "reactjs-components": "0.0.32",
     "reactjs-mixin": "0.0.2",
-    "statics": "^0.1.0",
     "underscore": "^1.7.0"
   },
   "devDependencies": {
@@ -42,7 +38,6 @@
     "gulp-cssnano": "^2.1.0",
     "gulp-eslint": "^1.1.1",
     "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.3.0",
     "gulp-less": "^3.0.2",
     "gulp-replace": "^0.5.3",
     "gulp-sourcemaps": "^1.5.2",
