--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "babel-runtime": "^6.3.19",
     "body-parser": "^1.13.2",
-    "canvas-ui": "^0.2.1",
+    "canvas-ui": "0.2.1",
     "classnames": "^2.2.1",
     "debug": "^2.2.0",
     "flux": "^2.1.1",
