Update reactjs-components to install dependencies with node 4.2.5

--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "less-color-lighten": "0.0.1",
     "lodash": "^4.0.0",
     "mesosphere-shared-reactjs": "0.0.8",
-    "react": "^0.13.3",
-    "react-gemini-scrollbar": "^1.1.1",
-    "react-router": "^1.0.3",
-    "reactjs-components": "0.0.38",
+    "react": "^0.14.6",
+    "react-addons-css-transition-group": "^0.14.6",
+    "react-gemini-scrollbar": "^2.1.0",
+    "react-router": "^2.0.0-rc5",
+    "reactjs-components": "^0.14.0",
     "reactjs-mixin": "0.0.2",
     "statics": "^0.1.0",
     "zxcvbn": "^4.2.0"
@@ -46,7 +47,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
-    "jest-cli": "^0.4.15",
+    "jest-cli": "^0.8.2",
     "jsx-loader": "^0.13.2",
     "node-libs-browser": "^0.5.2",
     "npm-shrinkwrap": "^5.3.0",
