--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "./bin/www",
   "author": "Mesosphere Web Team",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mesosphere/dcos-installer.git"
+  },
   "dependencies": {
     "babel-runtime": "^6.3.19",
     "body-parser": "^1.13.2",
@@ -18,6 +22,7 @@
     "mesosphere-shared-reactjs": "0.0.10",
     "react": "^0.14.6",
     "react-addons-css-transition-group": "^0.14.6",
+    "react-dom": "^0.14.6",
     "react-gemini-scrollbar": "^2.1.0",
     "react-router": "^2.0.0-rc5",
     "reactjs-components": "^0.14.0",
