copied over plugin system

--- a/package.json
+++ b/package.json
@@ -10,68 +10,79 @@
     "url": "https://github.com/mesosphere/dcos-installer.git"
   },
   "dependencies": {
-    "babel-runtime": "^6.3.19",
-    "body-parser": "^1.13.2",
+    "body-parser": "1.13.2",
     "canvas-ui": "0.2.1",
-    "classnames": "^2.2.1",
-    "debug": "^2.2.0",
-    "flux": "^2.1.1",
-    "history": "^1.17.0",
+    "classnames": "2.2.1",
+    "debug": "2.2.0",
+    "flux": "2.1.1",
+    "history": "1.17.0",
     "less-color-lighten": "0.0.1",
-    "lodash": "^4.0.0",
+    "lodash": "4.0.0",
     "mesosphere-shared-reactjs": "0.0.10",
-    "react": "^0.14.6",
-    "react-addons-css-transition-group": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "react-gemini-scrollbar": "^2.1.0",
-    "react-router": "^2.0.0-rc5",
-    "reactjs-components": "^0.14.0-beta.7",
+    "react": "0.14.6",
+    "react-addons-css-transition-group": "0.14.6",
+    "react-dom": "0.14.6",
+    "react-gemini-scrollbar": "2.1.0",
+    "react-router": "2.0.0-rc5",
+    "reactjs-components": "0.14.0-beta.7",
     "reactjs-mixin": "0.0.2",
-    "statics": "^0.1.0",
-    "zxcvbn": "^4.2.0"
+    "redux": "3.3.1",
+    "statics": "0.1.0",
+    "underscore": "1.7.0",
+    "zxcvbn": "4.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.3.26",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-runtime": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "browser-sync": "^2.7.13",
-    "envify": "^3.4.0",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.13.1",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-connect": "^2.3.1",
-    "gulp-cssnano": "^2.1.0",
-    "gulp-eslint": "^1.1.1",
-    "gulp-if": "^2.0.0",
-    "gulp-less": "^3.0.2",
-    "gulp-replace": "^0.5.3",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.6",
-    "jest-cli": "^0.8.2",
-    "jsx-loader": "^0.13.2",
-    "node-libs-browser": "^0.5.2",
-    "npm-shrinkwrap": "^200.4.0",
-    "source-map-loader": "^0.1.5",
-    "transform-loader": "^0.2.2",
-    "webpack": "^1.10.1"
+    "babel": "6.3.26",
+    "babel-cli": "6.4.0",
+    "babel-core": "6.4.5",
+    "babel-jest": "6.0.1",
+    "babel-loader": "6.2.2",
+    "babel-plugin-transform-runtime": "6.4.3",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "babel-runtime": "6.3.19",
+    "browser-sync": "2.7.13",
+    "del": "2.2.0",
+    "envify": "3.4.0",
+    "eslint": "1.10.3",
+    "eslint-plugin-react": "3.13.1",
+    "gulp": "3.9.0",
+    "gulp-autoprefixer": "3.1.0",
+    "gulp-changed": "1.3.0",
+    "gulp-connect": "2.3.1",
+    "gulp-cssnano": "2.1.0",
+    "gulp-eslint": "1.1.1",
+    "gulp-if": "2.0.0",
+    "gulp-less": "3.0.2",
+    "gulp-replace": "0.5.3",
+    "gulp-sourcemaps": "1.5.2",
+    "gulp-uglify": "1.2.0",
+    "gulp-util": "3.0.6",
+    "jest-cli": "0.8.2",
+    "jest-webpack-alias": "2.2.0",
+    "jsx-loader": "0.13.2",
+    "mkdirp": "0.5.1",
+    "node-libs-browser": "0.5.2",
+    "run-sequence": "1.1.5",
+    "source-map-loader": "0.1.5",
+    "transform-loader": "0.2.3",
+    "webpack": "1.10.1"
   },
   "scripts": {
     "clean": "rm -rf dist",
-    "dist": "npm run clean && NODE_ENV='production' ./node_modules/.bin/gulp dist",
+    "dist": "npm test && npm run clean && NODE_ENV='production' ./node_modules/.bin/gulp dist",
     "serve": "NODE_ENV='development' ./node_modules/.bin/gulp serve",
     "livereload": "NODE_ENV='development' ./node_modules/.bin/gulp livereload",
-    "shrinkwrap": "npm-shrinkwrap --dev",
-    "test": "jest"
+    "test": "./node_modules/.bin/gulp copy:external-plugins && jest"
+  },
+  "jest-webpack-alias": {
+    "configFile": ".webpack.config.js"
   },
   "jest": {
     "globals": {
       "__DEV__": true
     },
+    "scriptPreprocessor": "jest/preprocessor.js",
     "moduleFileExtensions": [
       "js",
       "json",
@@ -81,6 +92,36 @@
       "/tmp/",
       "/node_modules/",
       "/.module-cache/"
+    ],
+    "unmockedModulePathPatterns": [
+      "babel-runtime",
+      "browser-info",
+      "classnames",
+      "d3",
+      "events",
+      "flux",
+      "jasmine-reporters",
+      "localStorage",
+      "mesosphere-shared-reactjs",
+      "md5",
+      "mixins/index",
+      "src/js/config/",
+      "src/js/constants",
+      "src/js/mixins/PluginGetSetMixin",
+      "src/js/plugin-bridge/AppReducer",
+      "src/js/plugin-bridge/Hooks",
+      "src/js/plugin-bridge/middleware",
+      "src/js/plugin-bridge/PluginSDK",
+      "src/js/plugin-bridge/PluginTestUtils",
+      "src/js/structs",
+      "src/js/utils",
+      "plugins",
+      "react",
+      "reactjs-components",
+      "reactjs-mixin",
+      "react-router",
+      "redux",
+      "underscore"
     ],
     "testPathIgnorePatterns": [
       "/node_modules/"
