--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "jsx-loader": "0.13.2",
     "mkdirp": "0.5.1",
     "node-libs-browser": "0.5.2",
+    "react-addons-test-utils": "^0.14.6",
     "run-sequence": "1.1.5",
     "source-map-loader": "0.1.5",
     "transform-loader": "0.2.3",
@@ -100,6 +101,7 @@
       "d3",
       "events",
       "flux",
+      "lodash",
       "jasmine-reporters",
       "localStorage",
       "mesosphere-shared-reactjs",
@@ -121,7 +123,8 @@
       "reactjs-mixin",
       "react-router",
       "redux",
-      "underscore"
+      "underscore",
+      "react-addons-test-utils"
     ],
     "testPathIgnorePatterns": [
       "/node_modules/"
