--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "history": "1.17.0",
     "less-color-lighten": "0.0.1",
     "lodash": "4.0.0",
-    "mesosphere-shared-reactjs": "0.0.10",
+    "mesosphere-shared-reactjs": "0.0.14",
     "react": "0.14.6",
     "react-addons-css-transition-group": "0.14.6",
     "react-dom": "0.14.6",
@@ -60,6 +60,7 @@
     "gulp-util": "3.0.6",
     "jest-cli": "0.8.2",
     "jest-webpack-alias": "2.2.0",
+    "json-loader": "^0.5.4",
     "jsx-loader": "0.13.2",
     "mkdirp": "0.5.1",
     "node-libs-browser": "0.5.2",
