--- a/package.json
+++ b/package.json
@@ -60,11 +60,11 @@
     "gulp-util": "3.0.6",
     "jest-cli": "0.8.2",
     "jest-webpack-alias": "2.2.0",
-    "json-loader": "^0.5.4",
+    "json-loader": "0.5.4",
     "jsx-loader": "0.13.2",
     "mkdirp": "0.5.1",
     "node-libs-browser": "0.5.2",
-    "react-addons-test-utils": "^0.14.6",
+    "react-addons-test-utils": "0.14.6",
     "run-sequence": "1.1.5",
     "source-map-loader": "0.1.5",
     "transform-loader": "0.2.3",
