--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "babel": "6.3.26",
-    "babel-cli": "6.4.0",
+    "babel-cli": "7.0.0-beta.3",
     "babel-core": "6.4.5",
     "babel-jest": "6.0.1",
     "babel-loader": "6.2.2",
